# funktional

./: README.md  demo.py  pyproject.toml
fda/: __init__.py  basis.py  bezier.py  fpca.py  registration.py  representation.py  smoothing.py  stats.py
fda_module.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: b_splines.ipynb  bezier_curves.ipynb  shift_registration.ipynb
tests/: test_basis.py  test_fpca.py  test_smoothing.py
