[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda_module"
version = "0.1.0"
description = "A lightweight Python module for Functional Data Analysis (FDA)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0"
]

[tool.setuptools]
packages = ["fda"]
